Added gradient background and bouncing avatar

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/KyleKryza/EmilyPortfolio#readme",
   "dependencies": {
+    "@splinetool/runtime": "^0.9.470",
     "express": "^4.18.2"
   }
 }
